...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <TextView
                android:id="@+id/editHabitEventTitleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Habit Event Title"
                android:gravity="center"
                android:fontFamily="@font/rubik_bold"
                android:textSize="24dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/habitEventLocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="NONE"
                android:textAlignment="center"
                android:textColor="@color/blue"
...
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationChosenTV"
                android:layout_marginHorizontal="24dp"/>

            <Button
                android:id="@+id/chooseLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:fontFamily="@font/rubik_bold"
                android:text="CHOOSE LOCATION"
                app:cornerRadius="20dp"
...
