<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:elevation="5dp"
            android:padding="10dp"
            android:src="@drawable/default_profile_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Gradient" />

        <ImageView
            android:id="@+id/Gradient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gradient_start" />

        <ImageView
            android:id="@+id/usernameBackground"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Gradient" />


        <ImageView
            android:id="@+id/followersBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            app:layout_constraintTop_toTopOf="@id/usernameBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followingBackground"
            app:layout_constraintWidth_percent="0.5"/>

        <TextView
            android:id="@+id/followersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:text="FOLLOWERS"
            android:textColor="@color/green"
            android:textSize="14dp"
            app:layout_constraintEnd_toStartOf="@id/profilePicImageView"
            app:layout_constraintStart_toStartOf="@id/followersBackground"
            app:layout_constraintTop_toTopOf="@id/followersBackground"
            app:layout_constraintBottom_toTopOf="@+id/followersNumberTV"/>

        <TextView
            android:id="@+id/followersNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_light"
            app:layout_constraintStart_toStartOf="@id/followersBackground"
            app:layout_constraintEnd_toStartOf="@id/profilePicImageView"
            app:layout_constraintTop_toBottomOf="@id/followersTV"
            app:layout_constraintBottom_toBottomOf="@id/followersBackground"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/followingBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            app:layout_constraintTop_toTopOf="@id/usernameBackground"
            app:layout_constraintStart_toEndOf="@id/followersBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"/>

        <TextView
            android:id="@+id/followingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/rubik"
            android:text="FOLLOWING"
            android:textColor="@color/green"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/followingNumberTV"
            app:layout_constraintEnd_toEndOf="@id/followingBackground"
            app:layout_constraintStart_toEndOf="@id/profilePicImageView"
            app:layout_constraintTop_toTopOf="@id/followingBackground" />

        <TextView
            android:id="@+id/followingNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1234"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:fontFamily="@font/rubik_light"
            app:layout_constraintStart_toEndOf="@id/profilePicImageView"
            app:layout_constraintEnd_toEndOf="@id/followingBackground"
            app:layout_constraintTop_toBottomOf="@id/followingTV"
            app:layout_constraintBottom_toBottomOf="@id/followingBackground"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>



        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="USERNAME"
            android:fontFamily="@font/rubik_bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followersBackground"

            />

        <TextView
            android:id="@+id/fullNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="FULL NAME"
            android:fontFamily="@font/rubik"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTV"
            app:layout_constraintBottom_toBottomOf="@id/usernameBackground"
            />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/tab_background"
            android:clipToOutline="true"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/green"
            app:tabSelectedTextColor="@color/green"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorHeight="5dp"
            app:tabIndicatorFullWidth="false"
            app:tabPadding="15dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameBackground"
            />

        <Button
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:fontFamily="@font/rubik"
            android:text="FOLLOW"
            android:textSize="11sp"
            app:cornerRadius="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/usernameBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/usernameTV"
            app:layout_constraintTop_toBottomOf="@+id/followingBackground" />


</androidx.constraintlayout.widget.ConstraintLayout>