...
            android:text="wants to follow you"
            android:textSize="@dimen/secondary_font_size" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allowButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_bold"
        android:scaleX="0.8"
        android:scaleY="0.8"
...
        android:layout_marginStart="-8dp"
        android:layout_marginTop="-4dp"
        app:layout_constraintStart_toStartOf="@id/followRequestTextTopLayout"
        app:layout_constraintTop_toBottomOf="@id/followRequestTextTopLayout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/denyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="0.8"
        android:scaleX="0.8"
        android:text="DENY"
        android:textColor="@color/red"
...
